# graphverb

./: .gitignore  CMakeLists.txt  CMakePresets.json  Entitlements.plist  LICENSE  README.md
.github/workflows/: pr_check.yml  release.yml
Components/CommunityClustering/inc/: Centroid.h  CommunityClustering.h
Components/CommunityClustering/src/: CommunityClustering.cpp
Components/CommunityReverb/inc/: CommunityReverb.h
Components/SpectralAnalyzer/inc/: SpectralAnalyzer.h
Components/SpectralAnalyzer/src/: SpectralAnalyzer.cpp
Components/SpectralGraph/inc/: GraphEdge.h  GraphNode.h  SpectralGraph.h
Components/SpectralGraph/src/: SpectralGraph.cpp
Components/UI/Button/inc/: ButtonComponent.h
Components/UI/Button/src/: ButtonComponent.cpp
Components/UI/ClusterEnergy/inc/: ClusterEnergy.h
Components/UI/ClusterEnergy/src/: ClusterEnergy.cpp
Components/UI/ClusterVisualizer/inc/: ClusterParticle.h  ClusterVisualizer.h
Components/UI/ClusterVisualizer/src/: ClusterVisualizer.cpp
Components/UI/Knob/inc/: KnobComponent.h
Components/UI/Knob/src/: KnobComponent.cpp
Components/UI/Scope/inc/: AudioBufferQueue.h  ScopeComponent.h  ScopeDataCollector.h
GraphVerb/inc/: GraphVerb.h  GraphVerbEditor.h
GraphVerb/src/: GraphVerb.cpp  GraphVerbEditor.cpp
Graphverb/inc/: Graphverb.h  GraphverbEditor.h  ThreadSafeQueue.h
Graphverb/src/: Graphverb.cpp  GraphverbEditor.cpp
LICENSES/: steinberg_sdk_license.txt
